article model: add is_news flag

--- a/templates/incl/article_block_v2.html
+++ b/templates/incl/article_block_v2.html
@@ -7,12 +7,12 @@
                 <img class="pwi" src="{{ article.icon }}" alt="{{ article.title }}">
                 <div class="or2_normal">
                     <strong>
-                        <a href="{% url 'articles:detail' article.section.slug article.id %}">{{ article.title }}</a>
+                        <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
                     </strong>
                     {% if article.comments_count %}
                         <span class="active">
                             <a title="{{ article.comments_count|num_ending:'комментари,й,я,ев' }}"
-                               href="{% url 'articles:detail' article.section.slug article.id %}#clist">({{ article.comments_count }})</a>
+                               href="{{ article.get_absolute_url }}#clist">({{ article.comments_count }})</a>
                         </span>
                     {% endif %}
                     <br>
@@ -27,7 +27,7 @@
                 </div>
                 <div class="p_t">
                     <div class="normal">
-                        <a href="{% url 'articles:detail' article.section.slug article.id %}">{{ article.preview }}</a>
+                        <a href="{{ article.get_absolute_url }}">{{ article.preview }}</a>
                     </div>
                 </div>
             </div>
