--- a/templates/articles/section.html
+++ b/templates/articles/section.html
@@ -19,12 +19,12 @@
                             <div class="or2_normal">
                                 <img class="pwi" src="{{ article.icon }}" alt="{{ article.title }}">
                                 <strong class="black">
-                                    <a href="{% url 'articles:detail' article.section.slug article.id %}">{{ article.title }}</a>
+                                    <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
                                 </strong>
                                 {% if article.comments_count %}
                                     <span class="active_or">
                                         <a title="{{ article.comments_count|num_ending:'комментари,й,я,ев' }}"
-                                           href="{% url 'articles:detail' article.section.slug article.id %}#clist">({{ article.comments_count }})</a>
+                                           href="{{ article.get_absolute_url }}#clist">({{ article.comments_count }})</a>
                                     </span>
                                 {% endif %}
                                 <br>
@@ -39,9 +39,9 @@
                             </div>
                             <div class="p_t">
                                 <div class="normal">
-                                    <a href="{% url 'articles:detail' article.section.slug article.id %}">{{ article.preview }}</a>
+                                    <a href="{{ article.get_absolute_url }}">{{ article.preview }}</a>
                                     <span class="active_or">
-                                        <a href="{% url 'articles:detail' article.section.slug article.id %}">&gt;&gt;</a>
+                                        <a href="{{ article.get_absolute_url }}">&gt;&gt;</a>
                                     </span>
                                 </div>
                             </div>
