--- a/templates/incl/article_block_short.html
+++ b/templates/incl/article_block_short.html
@@ -1,11 +1,11 @@
 {% load htmlutils %}
 
 <div class="list {% if article.video %}list_video{% endif %}">
-    <a href="{% url 'articles:detail' article.section.slug article.id %}">{{ article.title }}</a>
+    <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
     {% if article.comments_count %}
         <span class="active">
             <a title="{{ article.comments_count|num_ending:'комментари,й,я,ев' }}"
-               href="{% url 'articles:detail' article.section.slug article.id %}#clist">({{ article.comments_count }})</a>
+               href="{{ article.get_absolute_url }}#clist">({{ article.comments_count }})</a>
         </span>
     {% endif %}
 </div>
