--- a/templates/incl/block_rating.html
+++ b/templates/incl/block_rating.html
@@ -22,11 +22,11 @@
                         <ul>
                             {% for article in header_rating_news %}
                                 <li>
-                                    <a href="{% url 'articles:detail' article.section.slug article.id %}">{{ article.title }}</a>
+                                    <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
                                     {% if article.comments_count %}
                                         <span class="active">
                                             <a title="{{ article.comments_count|num_ending:'комментари,й,я,ев' }}"
-                                               href="{% url 'articles:detail' article.section.slug article.id %}#clist">({{ article.comments_count }})</a>
+                                               href="{{ article.get_absolute_url }}#clist">({{ article.comments_count }})</a>
                                         </span>
                                     {% endif %}
                                 </li>
