--- a/templates/incl/block_video.html
+++ b/templates/incl/block_video.html
@@ -45,7 +45,7 @@
                                                         {% endif %}
                                                     </a>
                                                     <br />
-                                                    {{ article.publish_date }}
+                                                    {{ article.publish_date|date:'d.m.Y' }}
                                                 </div>
                                             </td>
                                         </tr>
