--- a/templates/incl/ya_context.html
+++ b/templates/incl/ya_context.html
@@ -3,8 +3,8 @@
         w[n] = w[n] || [];
         w[n].push(function() {
             Ya.Context.AdvManager.render({
-                blockId: "R-59310-1",
-                renderTo: "yandex_ad_R-59310-1",
+                blockId: "{{ block_id }}",
+                renderTo: "yandex_ad_{{ block_id }}",
                 async: true
             });
         });
