--- a/templates/base.html
+++ b/templates/base.html
@@ -183,7 +183,7 @@
 {% endif %}
 
 {% if request.path != '/' %}
-    {% include 'incl/ya_context.html' %}
+    {% include 'incl/ya_context.html' with block_id='R-59310-1' %}
 {% endif %}
 
 </body>
