--- a/templates/incl/article_block.html
+++ b/templates/incl/article_block.html
@@ -12,7 +12,7 @@
                         <strong>
                             <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
                         </strong>
-                        {% if article.comments_count %}
+                        {% if article.can_comment %}
                             <span class="active_or">
                                 <a title="{{ article.comments_count|num_ending:'комментари,й,я,ев' }}"
                                    href="{{ article.get_absolute_url }}#clist">({{ article.comments_count }})</a>
@@ -20,12 +20,8 @@
                         {% endif %}
                         <br>
                         <span>
-                            {% if article.main_author %}
-                                <a rel="author" href="{% url 'authors:detail' article.main_author.id %}.html">
-                                    <em>{{ article.main_author.cover_name }}</em>
-                                </a>
-                            {% endif %}
-                            {{ article.publish_date }}<br>
+                            {% include 'authors/incl/cover_name.html' with article=article %}
+                            {{ article.publish_date|date:'d.m.Y' }}<br>
                         </span>
                     </div>
                     <div class="p_t">
