--- a/templates/incl/article_block_short.html
+++ b/templates/incl/article_block_short.html
@@ -2,7 +2,7 @@
 
 <div class="list {% if article.video %}list_video{% endif %}">
     <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
-    {% if article.comments_count %}
+    {% if article.can_comment %}
         <span class="active">
             <a title="{{ article.comments_count|num_ending:'комментари,й,я,ев' }}"
                href="{{ article.get_absolute_url }}#clist">({{ article.comments_count }})</a>
