--- a/templates/incl/article_block_v2.html
+++ b/templates/incl/article_block_v2.html
@@ -9,7 +9,7 @@
                     <strong>
                         <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
                     </strong>
-                    {% if article.comments_count %}
+                    {% if article.can_comment %}
                         <span class="active">
                             <a title="{{ article.comments_count|num_ending:'комментари,й,я,ев' }}"
                                href="{{ article.get_absolute_url }}#clist">({{ article.comments_count }})</a>
@@ -17,12 +17,8 @@
                     {% endif %}
                     <br>
                     <span>
-                        {% if article.main_author %}
-                            <a rel="author" href="{% url 'authors:detail' article.main_author.id %}.html">
-                                <em>{{ article.main_author.cover_name }}</em>
-                            </a>
-                        {% endif %}
-                        {{ article.publish_date }}
+                        {% include 'authors/incl/cover_name.html' with article=article %}
+                        {{ article.publish_date|date:'d.m.Y' }}
                     </span>
                 </div>
                 <div class="p_t">
