--- a/templates/articles/index.html
+++ b/templates/articles/index.html
@@ -25,7 +25,7 @@
 </table>
 
 <div style="margin-top: 5px;" class="normal align-center">
-    {% include 'incl/ya_direct.html' %}
+    {% include 'incl/adv/ya_direct.html' %}
 </div>
 
 <div style="width:1px; height:7px"><!-- --></div>
