--- a/templates/articles/detail.html
+++ b/templates/articles/detail.html
@@ -8,136 +8,136 @@
 {% block description %}{{ object.preview }}{% endblock %}
 
 {% block content %}
-    <div style="width:1px; height:1px"><!-- --></div>
-    <div class="border_or">
-        <div class="p_hv" itemscope itemtype="http://schema.org/NewsArticle">
-            <div class="big1 ortext newstitle">
-                <h1 itemprop="headline">{{ object.title }}</h1>
-            </div>
-            <p class="news-meta">
-                <span>Опубликовано {{ object.publish_date|date:'d.m.Y' }}</span>
-                <meta itemprop="datePublished" content="{{ object.publish_date|date:'Y-m-d' }}"/>
-                <meta itemprop="articleSection" content="{{ object.section_name }}">
+<div style="width:1px; height:1px"><!-- --></div>
+<div class="border_or">
+    <div class="p_hv" itemscope itemtype="http://schema.org/NewsArticle">
+        <div class="big1 ortext newstitle">
+            <h1 itemprop="headline">{{ object.title }}</h1>
+        </div>
+        <p class="news-meta">
+            <span>Опубликовано {{ object.publish_date|date:'d.m.Y' }}</span>
+            <meta itemprop="datePublished" content="{{ object.publish_date|date:'Y-m-d' }}"/>
+            <meta itemprop="articleSection" content="{{ object.section_name }}">
+            <span>
+                автором
+                {% include 'authors/incl/cover_name.html' with article=object incl_microdata=True %}
+            </span>
+            <span itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
+                в разделе
+                <a itemprop="url" href="{% if object.is_news %}{% url 'articles:section' 'news' %}{% else %}{{ object.section.get_absolute_url }}{% endif %}">
+                    <em itemprop="title">
+                        {{ object.section_name }}
+                    </em>
+                </a>
+            </span>
+            {% if object.can_comment %}
                 <span>
-                    автором
-                    {% include 'authors/incl/cover_name.html' with article=object incl_microdata=True %}
-                </span>
-                <span itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
-                    в разделе
-                    <a itemprop="url" href="{% if object.is_news %}{% url 'articles:section' 'news' %}{% else %}{{ object.section.get_absolute_url }}{% endif %}">
-                        <em itemprop="title">
-                            {{ object.section_name }}
-                        </em>
+                    <a href="#clist" itemprop="discussionUrl" content="{{ article.get_absolute_url }}#clist">
+                        комментариев {{ object.comments_count }}
                     </a>
                 </span>
-                {% if object.can_comment %}
-                    <span>
-                        <a href="#clist" itemprop="discussionUrl" content="{{ article.get_absolute_url }}#clist">
-                            комментариев {{ object.comments_count }}
-                        </a>
-                    </span>
-                {% endif %}
-            </p>
-            {% if object.tags.all %}
-                {% for tag_item in object.tags.all %}
-                    <a href="{% url 'tags:detail' tag_item.tag_id %}" class="news-tag">{{ tag_item.tag.name }}</a>
-                {% endfor %}
-                <meta itemprop="keywords" content="{{ object.keywords }}"/>
             {% endif %}
-            {% if not object.video %}
-                <table class="noborder align-left" style="float:left">
-                    <tr>
-                        <td>
-                            <img itemprop="thumbnailUrl" class="pwi" src="{{ object.icon|crop:'100x100' }}"
-                                 alt="{{ object.title }}">
-                        </td>
-                    </tr>
-                </table>
+        </p>
+        {% if object.tags.all %}
+            {% for tag_item in object.tags.all %}
+                <a href="{% url 'tags:detail' tag_item.tag_id %}" class="news-tag">{{ tag_item.tag.name }}</a>
+            {% endfor %}
+            <meta itemprop="keywords" content="{{ object.keywords }}"/>
+        {% endif %}
+        {% if not object.video %}
+            <table class="noborder align-left" style="float:left">
+                <tr>
+                    <td>
+                        <img itemprop="thumbnailUrl" class="pwi" src="{{ object.icon|crop:'100x100' }}"
+                             alt="{{ object.title }}">
+                    </td>
+                </tr>
+            </table>
+        {% endif %}
+        <div class="or2_normal">
+            {% if object.source %}
+                <br>
+                <span>
+                    Источник:
+                    {% if object.source_link and object.source_link|slice:':4' == 'http' %}
+                        <a href="{{ object.source_link }}">{{ object.source }}</a>
+                    {% else %}
+                        {{ object.source }}
+                    {% endif %}
+                </span>
             {% endif %}
-            <div class="or2_normal">
-                {% if object.source %}
-                    <br>
-                    <span>
-                        Источник:
-                        {% if object.source_link and object.source_link|slice:':4' == 'http' %}
-                            <a href="{{ object.source_link }}">{{ object.source }}</a>
-                        {% else %}
-                            {{ object.source }}
-                        {% endif %}
-                    </span>
-                {% endif %}
 
-                {% if object.multimedia_set.all %}
-                    <br>&nbsp;Прикреплено:
-                    {% for media in object.multimedia_set.all %}
-                        <a href="{{ media.link }}" target="_blank">{{ media.description }}</a>&nbsp;
-                    {% endfor %}
-                    <br>
+            {% if object.multimedia_set.all %}
+                <br>&nbsp;Прикреплено:
+                {% for media in object.multimedia_set.all %}
+                    <a href="{{ media.link }}" target="_blank">{{ media.description }}</a>&nbsp;
+                {% endfor %}
+                <br>
+            {% endif %}
+        </div>
+        <div class="p_t">
+            <div class="normal newsbody" itemprop="articleBody">
+                {% if object.video %}
+                    {{ object.video_code }}
                 {% endif %}
-            </div>
-            <div class="p_t">
-                <div class="normal newsbody" itemprop="articleBody">
-                    {% if object.video %}
-                        {{ object.video_code }}
-                    {% endif %}
-                    {% if object.content|length > 1990 %}
-                        {% include 'incl/ads_by_google.html' %}
-                    {% endif %}
-                    <!--content-->
-                    {{ object.content }}
-                    <!--/content-->
-                    <br />
-                    <br />
-                    <div class="normal">
-                        <table class="full-table">
-                            <tr>
-                                <td class="align-left">
-                                    <& /www/comps/block_vote.msn, news => $news &>
-                                </td>
-                                <td class="align-right">
-                                    <table class="noborder">
-                                        <tr>
-                                            <td>
-                                                <span class="newshare">Поделиться</span>
-                                                <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,moimir,gplus" data-yashareTheme="counter"></div>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
+                {% if object.content|length > 1990 %}
+                    {% include 'incl/adv/ads_by_google.html' %}
+                {% endif %}
+                <!--content-->
+                {{ object.content }}
+                <!--/content-->
+                <br />
+                <br />
+                <div class="normal">
+                    <table class="full-table">
+                        <tr>
+                            <td class="align-left">
+                                <& /www/comps/block_vote.msn, news => $news &>
+                            </td>
+                            <td class="align-right">
+                                <table class="noborder">
+                                    <tr>
+                                        <td>
+                                            <span class="newshare">Поделиться</span>
+                                            <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,moimir,gplus" data-yashareTheme="counter"></div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <table class="full-table h7 bgFFF0E6">
-        <tr>
-            <td class="bg_orange_l w7"><div style="width:7px; height:7px"><!-- --></div></td>
-            <td class="wp100 bg_orange_c"><div style="width:1px; height:7px"><!-- --></div></td>
-            <td class="bg_orange_r w7"><div style="width:7px; height:7px"><!-- --></div></td>
-        </tr>
-    </table>
+<table class="full-table h7 bgFFF0E6">
+    <tr>
+        <td class="bg_orange_l w7"><div style="width:7px; height:7px"><!-- --></div></td>
+        <td class="wp100 bg_orange_c"><div style="width:1px; height:7px"><!-- --></div></td>
+        <td class="bg_orange_r w7"><div style="width:7px; height:7px"><!-- --></div></td>
+    </tr>
+</table>
 
-    <div style="margin-top: 5px;" class="normal align-center">
-        {% include 'incl/ya_direct.html' %}
-    </div>
+<div style="margin-top: 5px;" class="normal align-center">
+    {% include 'incl/adv/ya_direct.html' %}
+</div>
 
-    <div style="width:1px; height:7px"><!-- --></div>
+<div style="width:1px; height:7px"><!-- --></div>
 
-    {% if object.can_comment %}
-        <!--noindex-->
-        <& forum.msn, news => $news, %ARGS &>
-        <!--/noindex-->
-        <div style="width:1px; height:5px"><!-- --></div>
-        <div id="yandex_ad_R-59310-2"></div>
-        {% include 'incl/ya_context.html' with block_id='R-59310-2' %}
-        <div style="width:1px; height:5px"><!-- --></div>
-    {% else %}
-        <div style="width:1px; height:5px"><!-- --></div>
-        <& ../comps/block_in_sections.msn &>
-    {% endif %}
+{% if object.can_comment %}
+    <!--noindex-->
+    <& forum.msn, news => $news, %ARGS &>
+    <!--/noindex-->
+    <div style="width:1px; height:5px"><!-- --></div>
+    <div id="yandex_ad_R-59310-2"></div>
+    {% include 'incl/adv/ya_context.html' with block_id='R-59310-2' %}
+    <div style="width:1px; height:5px"><!-- --></div>
+{% else %}
+    <div style="width:1px; height:5px"><!-- --></div>
+    <& ../comps/block_in_sections.msn &>
+{% endif %}
 
 
 {#my $url = $news->get_url;#}
@@ -174,5 +174,4 @@
 {#if (@tags) {#}
 {#    $request->{tags} = '<meta name="news_keywords" content="'.join(', ', map { $_->name } @tags).'">';#}
 {#}#}
-
 {% endblock %}
