--- a/templates/articles/index.html
+++ b/templates/articles/index.html
@@ -33,14 +33,14 @@
 <table class="full-table">
     <tr>
         <td class="valign-top wp50">
-            {% include 'incl/block_part_main.html' with section=materials.politic %}
+            {% include 'incl/section_tile.html' with section=materials.politic %}
             <div style="width:1px; height:7px"><!-- --></div>
         </td>
         <td class="w7">
             <div style="width:7px; height:1px"><!-- --></div>
         </td>
         <td class="valign-top wp50">
-            {% include 'incl/block_part_main.html' with section=materials.moscow %}
+            {% include 'incl/section_tile.html' with section=materials.moscow %}
             <div style="width:1px; height:7px"><!-- --></div>
         </td>
     </tr>
@@ -49,22 +49,22 @@
 <table class="full-table">
     <tr>
         <td class="valign-top wp50">
-            {% include 'incl/block_part_main.html' with section=materials.economic %}
+            {% include 'incl/section_tile.html' with section=materials.economic %}
             <div style="width:1px; height:7px"><!-- --></div>
-            {% include 'incl/block_part_main.html' with section=materials.region %}
+            {% include 'incl/section_tile.html' with section=materials.region %}
             <div style="width:1px; height:7px"><!-- --></div>
-            {% include 'incl/block_part_main.html' with section=materials.society %}
+            {% include 'incl/section_tile.html' with section=materials.society %}
             <div style="width:1px; height:7px"><!-- --></div>
         </td>
         <td class="w7">
             <div style="width:7px; height:1px"><!-- --></div>
         </td>
         <td class="valign-top wp50">
-            {% include 'incl/block_part_main.html' with section=materials.power %}
+            {% include 'incl/section_tile.html' with section=materials.power %}
             <div style="width:1px; height:7px"><!-- --></div>
-            {% include 'incl/block_part_main.html' with section=materials.fpolitic %}
+            {% include 'incl/section_tile.html' with section=materials.fpolitic %}
             <div style="width:1px; height:7px"><!-- --></div>
-            {% include 'incl/block_part_main.html' with section=materials.kompromat %}
+            {% include 'incl/section_tile.html' with section=materials.kompromat %}
             <div style="width:1px; height:7px"><!-- --></div>
         </td>
     </tr>
