--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
 </head>
 <body>
 
-{% include 'incl/header_bottom.html' %}
+{% include 'incl/header.html' %}
 
 <table class="full-table">
     <tr>
@@ -123,7 +123,42 @@
 
 <div style="width:1px; height:14px"><!-- --></div>
 
-{% include 'incl/block_banners_bottom.html' %}
+<!--noindex-->
+<table class="noborder">
+    <tr>
+        <td class="valign-top align-center">
+            &nbsp;&nbsp;
+            <a rel="nofollow" href="http://www.cprf.info/" target=_blank>
+                <img src="{% static 'i/banner/neo.gif' %}" width=88 height=31 alt="">
+            </a>
+        </td>
+        <td class="valign-top align-center">
+            &nbsp;&nbsp;
+            <a href="/opposition_hoop/">
+                <img src="{% static 'i/banner/bun2_88x31_1.gif' %}" width="88" height="31" alt="">
+            </a>
+        </td>
+        <td class="valign-top align-center">
+            &nbsp;&nbsp;
+            <a rel="nofollow" href="http://www.pravda.info/" target=_blank>
+                <img src="{% static 'i/banner/pravda_info_small.gif' %}" width=88 height=31 alt="">
+            </a>
+        </td>
+        <td class="valign-top align-center">
+            &nbsp;&nbsp;
+            <a rel="nofollow" href="http://radreal.su/" target=_blank>
+                <img src="{% static 'i/banner/radreal.gif' %}"  width=88 height=31 alt="">
+            </a>
+        </td>
+        <td class="valign-top align-center">
+            &nbsp;&nbsp;
+            <a rel="nofollow" href="http://ucp.su/" target=_blank>
+                <img src="{% static 'i/banner/okp.png' %}"  width=88 height=31 alt="">
+            </a>
+        </td>
+    </tr>
+</table>
+<!--/noindex-->
 
 <table class="full-table h21">
 	<tr>
