--- a/templates/articles/section.html
+++ b/templates/articles/section.html
@@ -63,15 +63,9 @@
 
 <table class="full-table h7 bgFFF0E6">
     <tr>
-        <td class="bg_orange_l w7">
-            <div style="width:7px; height:7px"><!-- --></div>
-        </td>
-        <td class="wp100 bg_orange_c">
-            <div style="width:1px; height:7px"><!-- --></div>
-        </td>
-        <td class="bg_orange_r w7">
-            <div style="width:7px; height:7px"><!-- --></div>
-        </td>
+        <td class="bg_orange_l w7"><div style="width:7px; height:7px"><!-- --></div></td>
+        <td class="wp100 bg_orange_c"><div style="width:1px; height:7px"><!-- --></div></td>
+        <td class="bg_orange_r w7"><div style="width:7px; height:7px"><!-- --></div></td>
     </tr>
 </table>
 {% endblock %}
