--- a/templates/incl/sidebar/blocks/news.html
+++ b/templates/incl/sidebar/blocks/news.html
@@ -6,6 +6,8 @@
 
 {% block content %}
 {% for article in sidebar_news %}
-    {% include 'incl/article_block_short.html' %}
+    <div class="list {% if article.video %}list_video{% endif %}">
+        {% include 'articles/incl/link.html' with article=article %}
+    </div>
 {% endfor %}
 {% endblock %}
