--- a/templates/articles/incl/link.html
+++ b/templates/articles/incl/link.html
@@ -8,7 +8,7 @@
     <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
 {% endif %}
 
-{% if article.can_comment %}
+{% if article.show_comments %}
     <span class="active">
         <a title="{{ article.comments_count|num_ending:'комментари,й,я,ев' }}"
            href="{{ article.get_absolute_url }}#clist">({{ article.comments_count }})</a>
