--- a/templates/articles/section.html
+++ b/templates/articles/section.html
@@ -21,7 +21,7 @@
                             <strong class="black">
                                 <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
                             </strong>
-                            {% if article.can_comment %}
+                            {% if article.show_comments %}
                                 <span class="active_or">
                                     <a title="{{ article.comments_count|num_ending:'комментари,й,я,ев' }}"
                                        href="{{ article.get_absolute_url }}#clist">({{ article.comments_count }})</a>
