--- a/templates/incl/forum.html
+++ b/templates/incl/forum.html
@@ -27,7 +27,7 @@
             {% if not article.comment_set.exists %}
                 Нет ни одного комментария, ваш ответ будет первым<br>
             {% endif %}
-            {% include 'incl/paginator.html' with page_obj=art_comments %}
+            {% include 'incl/paginator.html' with page_obj=art_comments page='pf' anchor='clist' %}
         </div>
     </div>
 
