--- a/templates/articles/index.html
+++ b/templates/articles/index.html
@@ -37,14 +37,14 @@
 <table class="full-table">
     <tr>
         <td class="valign-top wp50">
-            {% include 'incl/tile/block.html' with section=materials.politic %}
+            {% include 'incl/tile/block.html' with material=materials.politic %}
             <div style="width:1px; height:7px"><!-- --></div>
         </td>
         <td class="w7">
             <div style="width:7px; height:1px"><!-- --></div>
         </td>
         <td class="valign-top wp50">
-            {% include 'incl/tile/block.html' with section=materials.moscow %}
+            {% include 'incl/tile/block.html' with material=materials.moscow %}
             <div style="width:1px; height:7px"><!-- --></div>
         </td>
     </tr>
@@ -53,22 +53,22 @@
 <table class="full-table">
     <tr>
         <td class="valign-top wp50">
-            {% include 'incl/tile/block.html' with section=materials.economic %}
+            {% include 'incl/tile/block.html' with material=materials.economic %}
             <div style="width:1px; height:7px"><!-- --></div>
-            {% include 'incl/tile/block.html' with section=materials.region %}
+            {% include 'incl/tile/block.html' with material=materials.region %}
             <div style="width:1px; height:7px"><!-- --></div>
-            {% include 'incl/tile/block.html' with section=materials.society %}
+            {% include 'incl/tile/block.html' with material=materials.society %}
             <div style="width:1px; height:7px"><!-- --></div>
         </td>
         <td class="w7">
             <div style="width:7px; height:1px"><!-- --></div>
         </td>
         <td class="valign-top wp50">
-            {% include 'incl/tile/block.html' with section=materials.power %}
+            {% include 'incl/tile/block.html' with material=materials.power %}
             <div style="width:1px; height:7px"><!-- --></div>
-            {% include 'incl/tile/block.html' with section=materials.fpolitic %}
+            {% include 'incl/tile/block.html' with material=materials.fpolitic %}
             <div style="width:1px; height:7px"><!-- --></div>
-            {% include 'incl/tile/block.html' with section=materials.kompromat %}
+            {% include 'incl/tile/block.html' with material=materials.kompromat %}
             <div style="width:1px; height:7px"><!-- --></div>
         </td>
     </tr>
